[gd_scene load_steps=3 format=3 uid="uid://bx2yh4i32ug5n"]

[ext_resource type="Texture2D" uid="uid://dgbe8puaplb6m" path="res://icon.svg" id="1_20gid"]
[ext_resource type="Script" path="res://Scene/Other/BuffUI/buff_ui.gd" id="2_584jx"]

[node name="BuffUI" type="TextureRect"]
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("1_20gid")
script = ExtResource("2_584jx")

[node name="ContentContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -131.0
offset_top = 100.0
offset_right = 131.0
offset_bottom = 357.0
grow_horizontal = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="ContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ContentLabel" type="RichTextLabel" parent="ContentContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "[center]666[/center]"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
